--- a/slides/index.html
+++ b/slides/index.html
@@ -47,25 +47,15 @@
 
 
 <section>
-<section id="slide-org4f9f23b">
-<h2 id="org4f9f23b">CP213: Applied Mathematics and Problem Solving</h2>
-<p>
-<a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a>
-</p>
-
-<p>
-Schedule:
-</p>
+<section id="slide-org3845ec8">
+<h2 id="org3845ec8">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
+<li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace site</a></li>
 <li>Week 0: <a href="./intro_notes-2020.html">Module overview</a></li>
-<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a></li>
+<li>Week 1: <a href="./python_notes.html">Introduction to Python</a> / Tutorial <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week1.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week1.ipynb">colab</a></li>
 <li>Weeks 2-4: Differential balances
 <ul>
-<li><a href="./mass_notes.html">Mass and species balances</a> / Tutorial  <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week2.ipynb"><object type="image/svg+xml" data="https://mybinder.org/badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week2.ipynb"><object type="image/svg+xml" data="https://colab.research.google.com/assets/colab-badge.svg" class="org-svg">
-Sorry, your browser does not support SVG.</object></a></li>
+<li><a href="./mass_notes.html">Mass and species balances</a> / Tutorial  <a href="https://mybinder.org/v2/gh/mjksill/CP213-online.git/master?filepath=tutorials/week2.ipynb">binder</a> <a href="https://colab.research.google.com/github/mjksill/CP213-online/blob/master/tutorials/week2.ipynb">colab</a></li>
 <li><a href="./energy_notes.html">Energy balances</a> / Tutorial</li>
 <li><a href="./momentum_notes.html">Momentum/force balances</a> / Tutorial</li>
 
@@ -78,8 +68,8 @@ Sorry, your browser does not support SVG.</object></a></li>
 </section>
 </section>
 <section>
-<section id="slide-orgc56c075">
-<h2 id="orgc56c075">Introduction to Python</h2>
+<section id="slide-orgd98ed58">
+<h2 id="orgd98ed58">Introduction to Python</h2>
 <p>
 Week 1
 </p>
@@ -95,8 +85,8 @@ Sorry, your browser does not support SVG.</object></a></li>
 </section>
 </section>
 <section>
-<section id="slide-orgb1f5ee0">
-<h2 id="orgb1f5ee0">Differential balances</h2>
+<section id="slide-orgc2ed871">
+<h2 id="orgc2ed871">Differential balances</h2>
 <p>
 Weeks 2-4
 </p>
@@ -110,20 +100,20 @@ Weeks 2-4
 
 
 </section>
-<section id="slide-org9566b4e">
-<h3 id="org9566b4e">Mass and species balances</h3>
+<section id="slide-org8d65bdc">
+<h3 id="org8d65bdc">Mass and species balances</h3>
 </section>
-<section id="slide-org1e5c7ef">
-<h3 id="org1e5c7ef">Energy balance</h3>
+<section id="slide-org66b71de">
+<h3 id="org66b71de">Energy balance</h3>
 </section>
-<section id="slide-org958d786">
-<h3 id="org958d786">Momentum and force balances</h3>
+<section id="slide-org3659912">
+<h3 id="org3659912">Momentum and force balances</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org59bfe3a">
-<h2 id="org59bfe3a">Ordinary differential equations</h2>
+<section id="slide-org7f28208">
+<h2 id="org7f28208">Ordinary differential equations</h2>
 <p>
 Weeks 5-8
 </p>
@@ -134,20 +124,20 @@ Weeks 5-8
 </ul>
 
 </section>
-<section id="slide-orgac3310e">
-<h3 id="orgac3310e">First order</h3>
+<section id="slide-org3fbab03">
+<h3 id="org3fbab03">First order</h3>
 </section>
-<section id="slide-org7af3c36">
-<h3 id="org7af3c36">Second order</h3>
+<section id="slide-org1e75c65">
+<h3 id="org1e75c65">Second order</h3>
 </section>
-<section id="slide-orgc78c3d5">
-<h3 id="orgc78c3d5">Numerical methods</h3>
+<section id="slide-orgeda3ff7">
+<h3 id="orgeda3ff7">Numerical methods</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org47a4509">
-<h2 id="org47a4509">Multivariate calculus</h2>
+<section id="slide-orgfcce7a4">
+<h2 id="orgfcce7a4">Multivariate calculus</h2>
 <p>
 Weeks 9-10
 </p>
@@ -158,12 +148,12 @@ Weeks 9-10
 </ul>
 
 </section>
-<section id="slide-org0ff5916">
-<h3 id="org0ff5916">Partial derivatives</h3>
+<section id="slide-org6006628">
+<h3 id="org6006628">Partial derivatives</h3>
 
 </section>
-<section id="slide-orgbc59540">
-<h3 id="orgbc59540">Multiple integration</h3>
+<section id="slide-org8a90cb9">
+<h3 id="org8a90cb9">Multiple integration</h3>
 </section>
 </section>
 </div>
